--- a/index.html
+++ b/index.html
@@ -353,32 +353,15 @@ function FortuneTypeCard({type,className=""}){
   const shareUrl="https://yorunokotoba.vercel.app";
   const fullText=shareText+"\n"+shareUrl;
   const [shareMsg,setShareMsg]=useState("");
-  const cardRef=useRef(null);
+  const storyRef=useRef(null);
   async function saveImage(){
-    const target=cardRef.current;
-    if(!target)return;
+    if(!storyRef.current)return;
     try{
       setShareMsg("画像を作成中...");
-      const canvas=await html2canvas(target,{backgroundColor:"#FFF5F0",scale:3,useCORS:true,logging:false});
-      // Create story-sized canvas (9:16)
-      const storyW=1080;const storyH=1920;
-      const sc=document.createElement("canvas");sc.width=storyW;sc.height=storyH;
-      const ctx=sc.getContext("2d");
-      // Background
-      const grad=ctx.createLinearGradient(0,0,storyW,storyH);
-      grad.addColorStop(0,"#FFF8F5");grad.addColorStop(0.5,"#FFF0EC");grad.addColorStop(1,"#FFF5F0");
-      ctx.fillStyle=grad;ctx.fillRect(0,0,storyW,storyH);
-      // Center the captured card
-      const ratio=Math.min((storyW*0.85)/canvas.width,(storyH*0.7)/canvas.height);
-      const dw=canvas.width*ratio;const dh=canvas.height*ratio;
-      const dx=(storyW-dw)/2;const dy=(storyH-dh)/2-60;
-      ctx.drawImage(canvas,dx,dy,dw,dh);
-      // Watermark
-      ctx.fillStyle="#ccc";ctx.font="28px 'Cormorant',serif";ctx.textAlign="center";
-      ctx.fillText("よるのことば",storyW/2,storyH-120);
-      ctx.font="22px sans-serif";ctx.fillStyle="#ddd";
-      ctx.fillText("yorunokotoba.vercel.app",storyW/2,storyH-80);
-      const dataUrl=sc.toDataURL("image/png");
+      storyRef.current.style.display="flex";
+      const canvas=await html2canvas(storyRef.current,{backgroundColor:null,scale:2,useCORS:true,logging:false,width:360,height:640});
+      storyRef.current.style.display="none";
+      const dataUrl=canvas.toDataURL("image/png");
       if(navigator.share&&/iPhone|iPad|Android/.test(navigator.userAgent)){
         const blob=await(await fetch(dataUrl)).blob();
         const file=new File([blob],"yorunokotoba.png",{type:"image/png"});
@@ -416,9 +399,37 @@ function FortuneTypeCard({type,className=""}){
     N: {bg:"linear-gradient(135deg,#FFF8F5,#FFF5F0,#FFF8F5)",border:"1px solid rgba(200,160,180,0.25)",accent:"#E8627C",nameGrad:`linear-gradient(135deg,${tc},#E8627C)`,stars:"",labelBg:"rgba(232,98,124,0.08)",labelColor:"#E8627C",glow:"0 4px 20px rgba(0,0,0,0.04)",holoBg:"none",shimmer:false}
   };
   const cd = cardDesigns[type.rarity] || cardDesigns.N;
+  // Story card colors (no CSS vars, no WebkitBackgroundClip - html2canvas safe)
+  const stBorder = isSSR ? "3px solid #D4A853" : type.rarity==="SR" ? "3px solid #7B8CDE" : type.rarity==="R" ? "2px solid #E8627C" : "2px solid rgba(200,160,180,0.3)";
   return<div className={className} style={{textAlign:"center",margin:"24px 0"}}>
-    {/* Visible card on page - also used for image capture */}
-    <div ref={cardRef} style={{width:"100%",maxWidth:320,margin:"0 auto 16px",padding:"28px 24px",borderRadius:24,background:cd.bg,border:cd.border,boxShadow:cd.glow,animation:isSSR?"rarityGlow 3s ease infinite":"none",textAlign:"center",position:"relative",overflow:"hidden"}}>
+    {/* Hidden story card for DL (9:16 = 360x640) */}
+    <div ref={storyRef} style={{display:"none",position:"absolute",left:"-9999px",width:360,height:640,background:cd.bg,overflow:"hidden",fontFamily:"Zen Maru Gothic, sans-serif",flexDirection:"column",alignItems:"center",justifyContent:"center"}}>
+      {cd.shimmer&&<div style={{position:"absolute",inset:0,background:cd.holoBg}}></div>}
+      {cd.shimmer&&<div style={{position:"absolute",inset:0,background:"linear-gradient(135deg,transparent 20%,rgba(255,255,255,0.5) 45%,rgba(255,255,255,0.6) 50%,rgba(255,255,255,0.5) 55%,transparent 80%)"}}></div>}
+      {isSSR&&<>{[[30,50,10],[290,80,14],[55,340,8],[310,400,12],[160,490,6],[270,160,9],[45,470,11],[320,40,7],[185,90,13],[80,540,8]].map(([x,y,sz],i)=><div key={i} style={{position:"absolute",left:x,top:y,fontSize:sz,color:"#D4A853",opacity:0.25}}>✦</div>)}</>}
+      {type.rarity==="SR"&&<>{[[40,70,10],[285,140,12],[65,430,8],[275,360,11]].map(([x,y,sz],i)=><div key={i} style={{position:"absolute",left:x,top:y,fontSize:sz,color:"#7B8CDE",opacity:0.2}}>✦</div>)}</>}
+      <div style={{position:"relative",zIndex:1,display:"flex",flexDirection:"column",alignItems:"center",justifyContent:"center",height:"100%",padding:"0 30px",textAlign:"center"}}>
+        <p style={{fontSize:10,letterSpacing:6,color:"#bbb",textTransform:"uppercase",fontFamily:"Cormorant, serif",marginBottom:14}}>your character</p>
+        <div style={{width:160,height:160,borderRadius:"50%",overflow:"hidden",border:stBorder,boxShadow:cd.glow}}>
+          <img src={CHARA_IMAGES[type.id]||CHARA_IMAGES.yume_kobuta} width={160} height={160} style={{display:"block",objectFit:"cover"}}/>
+        </div>
+        <div style={{marginTop:16,marginBottom:6}}>
+          <span style={{padding:"5px 20px",borderRadius:20,fontSize:13,fontWeight:700,letterSpacing:2,background:cd.labelBg,color:cd.labelColor,display:"inline-block"}}>{cd.stars?cd.stars+" ":""}{r.label}</span>
+        </div>
+        <p style={{fontSize:32,fontWeight:700,marginTop:10,marginBottom:6,color:cd.accent}}>{type.name}</p>
+        <p style={{fontSize:15,color:"#888"}}>{type.sub}</p>
+        <p style={{fontSize:14,color:cd.accent,fontWeight:700,marginTop:6}}>出現率 {type.pct}</p>
+        <div style={{margin:"20px auto",width:200,height:1,background:"linear-gradient(90deg,transparent,rgba(0,0,0,0.06),transparent)"}}></div>
+        <p style={{fontSize:12,color:"#999",lineHeight:1.8,padding:"0 8px"}}>{type.desc.slice(0,60)}...</p>
+        <div style={{marginTop:24}}>
+          <p style={{fontSize:11,letterSpacing:4,color:"#ccc",fontFamily:"Cormorant, serif"}}>よるのことば</p>
+          <p style={{fontSize:9,color:"#ddd",marginTop:4}}>yorunokotoba.vercel.app</p>
+        </div>
+      </div>
+    </div>
+
+    {/* Visible card on page */}
+    <div style={{width:"100%",maxWidth:320,margin:"0 auto 16px",padding:"28px 24px",borderRadius:24,background:cd.bg,border:cd.border,boxShadow:cd.glow,animation:isSSR?"rarityGlow 3s ease infinite":"none",textAlign:"center",position:"relative",overflow:"hidden"}}>
       {cd.shimmer&&<div style={{position:"absolute",inset:0,background:cd.holoBg,borderRadius:24}}></div>}
       {cd.shimmer&&<div className="holo-shimmer" style={{position:"absolute",inset:0,background:"linear-gradient(135deg,transparent 30%,rgba(255,255,255,0.5) 50%,transparent 70%)",backgroundSize:"200% 200%",borderRadius:24,animation:"holoShimmer 3s ease infinite"}}></div>}
       <div style={{position:"relative",zIndex:1,display:"flex",flexDirection:"column",alignItems:"center"}}>
