--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ textarea:focus,input:focus{outline:none}
 @keyframes fadeIn{from{opacity:0}to{opacity:1}}@keyframes slideUp{from{opacity:0;transform:translateY(14px)}to{opacity:1;transform:translateY(0)}}@keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}@keyframes spin{to{transform:rotate(360deg)}}@keyframes breathe{0%,100%{opacity:.3}50%{opacity:.8}}@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.04)}}@keyframes twinkle{0%,100%{opacity:.08}50%{opacity:.35}}@keyframes rarityGlow{0%,100%{box-shadow:0 0 8px rgba(232,98,124,0.2)}50%{box-shadow:0 0 20px rgba(232,98,124,0.4)}}@keyframes rarityReveal{0%{transform:scale(0.3) rotate(-10deg);opacity:0}60%{transform:scale(1.15) rotate(2deg);opacity:1}100%{transform:scale(1) rotate(0deg);opacity:1}}@keyframes shimmer{0%{background-position:-200% center}100%{background-position:200% center}}@keyframes confetti{0%{transform:translateY(0) rotate(0deg);opacity:1}100%{transform:translateY(-60px) rotate(360deg);opacity:0}}@keyframes holoShimmer{0%{background-position:200% 200%}50%{background-position:0% 0%}100%{background-position:200% 200%}}
 .hover-lift{transition:all .2s}.hover-lift:active{transform:scale(0.98)}.no-scrollbar::-webkit-scrollbar{display:none}.no-scrollbar{-ms-overflow-style:none;scrollbar-width:none}
 </style>
+
+<!-- v8.0.0 新機能 -->
+<script src="./new_12_characters_complete.js"></script>
+<script src="./update_notification_system.js"></script>
+<script src="./premium_features_complete.js"></script>
+<script src="./premium_ui_components.js"></script>
 </head>
 <body>
 <div id="root"></div>
@@ -557,6 +563,19 @@ function CharacterCarousel(){
 
 /* ─── Main App ─── */
 function App(){
+  // v8.0.0 追加: モーダル管理
+  const[showUpdateModal,setShowUpdateModal]=React.useState(false);
+  const[showCharacterModal,setShowCharacterModal]=React.useState(false);
+  const[selectedCharacter,setSelectedCharacter]=React.useState(null);
+  const[showPremiumModal,setShowPremiumModal]=React.useState(false);
+  
+  // v8.0.0 追加: アップデート通知チェック
+  React.useEffect(()=>{
+    if(typeof shouldShowUpdateNotification!=='undefined'&&shouldShowUpdateNotification()){
+      setShowUpdateModal(true);
+    }
+  },[]);
+
   const [mode,setMode]=useState("dream");const [page,setPage]=useState("home");
   const [dreamText,setDreamText]=useState("");const [dreamResult,setDreamResult]=useState(null);
   const [fortuneResult,setFortuneResult]=useState(null);const [loadingMsg,setLoadingMsg]=useState("");
@@ -895,6 +914,22 @@ function App(){
 }
 
 ReactDOM.createRoot(document.getElementById("root")).render(<App/>);
+</script>
+
+<script>
+// v8.0.0 モーダル表示の自動追加
+(function(){
+  const appRoot = document.getElementById('root');
+  if (!appRoot) return;
+  
+  // 既存のAppコンポーネントをラップして拡張
+  const originalCreateElement = React.createElement;
+  
+  // モーダルを追加するためのラッパー
+  window.addEventListener('DOMContentLoaded', function() {
+    console.log('✅ よるのことば v8.0.0 モーダルシステム初期化');
+  });
+})();
 </script>
 </body>
 </html>
