--- a/index.html
+++ b/index.html
@@ -538,6 +538,18 @@ function FortuneTypeCard({type,className=""}){
         <p style={{fontSize:12,color:"var(--rose)",fontWeight:700}}>✓ {shareMsg}</p>
       </div>}
     </div>
+
+    {/* v8.0.0 プレミアムCTA */}
+    <div style={{background:"linear-gradient(135deg,#667eea 0%,#764ba2 100%)",borderRadius:15,padding:25,marginTop:20,textAlign:"center",position:"relative",overflow:"hidden"}}>
+      <div style={{position:"relative",zIndex:1}}>
+        <div style={{fontSize:24,marginBottom:10}}>✨💕</div>
+        <h3 style={{color:"white",fontSize:20,fontWeight:"bold",marginBottom:10}}>二人の相性を詳しく診断</h3>
+        <p style={{color:"rgba(255,255,255,0.9)",fontSize:14,lineHeight:1.6,marginBottom:20}}>気になるあの人との相性は？<br/>24パターンの詳細診断で、二人の未来が見えてくる</p>
+        <div style={{backgroundColor:"white",color:"#667eea",border:"none",borderRadius:25,padding:"15px 40px",fontSize:16,fontWeight:"bold",cursor:"pointer",boxShadow:"0 4px 15px rgba(0,0,0,0.2)",display:"inline-block"}}>相性診断（準備中）</div>
+        <p style={{color:"rgba(255,255,255,0.8)",fontSize:12,marginTop:15}}>近日公開予定</p>
+      </div>
+    </div>
+
   </div>;
 }
 
@@ -563,19 +575,6 @@ function CharacterCarousel(){
 
 /* ─── Main App ─── */
 function App(){
-  // v8.0.0 追加: モーダル管理
-  const[showUpdateModal,setShowUpdateModal]=React.useState(false);
-  const[showCharacterModal,setShowCharacterModal]=React.useState(false);
-  const[selectedCharacter,setSelectedCharacter]=React.useState(null);
-  const[showPremiumModal,setShowPremiumModal]=React.useState(false);
-  
-  // v8.0.0 追加: アップデート通知チェック
-  React.useEffect(()=>{
-    if(typeof shouldShowUpdateNotification!=='undefined'&&shouldShowUpdateNotification()){
-      setShowUpdateModal(true);
-    }
-  },[]);
-
   const [mode,setMode]=useState("dream");const [page,setPage]=useState("home");
   const [dreamText,setDreamText]=useState("");const [dreamResult,setDreamResult]=useState(null);
   const [fortuneResult,setFortuneResult]=useState(null);const [loadingMsg,setLoadingMsg]=useState("");
@@ -914,22 +913,6 @@ function App(){
 }
 
 ReactDOM.createRoot(document.getElementById("root")).render(<App/>);
-</script>
-
-<script>
-// v8.0.0 モーダル表示の自動追加
-(function(){
-  const appRoot = document.getElementById('root');
-  if (!appRoot) return;
-  
-  // 既存のAppコンポーネントをラップして拡張
-  const originalCreateElement = React.createElement;
-  
-  // モーダルを追加するためのラッパー
-  window.addEventListener('DOMContentLoaded', function() {
-    console.log('✅ よるのことば v8.0.0 モーダルシステム初期化');
-  });
-})();
 </script>
 </body>
 </html>
