--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ textarea:focus,input:focus{outline:none}
 </style>
 
 <!-- 新機能 -->
-<script src="./new_12_characters_complete.js"></script>
-<script src="./update_notification_system.js"></script>
-<script src="./premium_features_complete.js"></script>
-<script src="./premium_ui_components.js"></script>
+<script src="./new_12_characters_complete.js?v=2"></script>
+<script src="./update_notification_system.js?v=2"></script>
+<script src="./premium_features_complete.js?v=2"></script>
+<script src="./premium_ui_components.js?v=2"></script>
 </head>
 <body>
 <div id="root"></div>
