--- a/index.html
+++ b/index.html
@@ -61,13 +61,17 @@ textarea:focus,input:focus{outline:none}
 .hover-lift{transition:all .2s}.hover-lift:active{transform:scale(0.98)}.no-scrollbar::-webkit-scrollbar{display:none}.no-scrollbar{-ms-overflow-style:none;scrollbar-width:none}
 </style>
 
-<!-- 新機能 -->
-<script src="./update_notification_system.js?v=4"></script>
-<script src="./premium_features_complete.js?v=4"></script>
-<script src="./premium_ui_components.js?v=4"></script>
-<!-- SW更新＆キャッシュクリア -->
+<!-- SW更新＆キャッシュクリア v2 -->
 <script>
+if('caches' in window){
+  caches.keys().then(function(names){
+    names.forEach(function(name){caches.delete(name)});
+  });
+}
 if('serviceWorker' in navigator){
+  navigator.serviceWorker.getRegistrations().then(function(regs){
+    regs.forEach(function(r){r.update()});
+  });
   navigator.serviceWorker.register('/firebase-messaging-sw.js').then(function(reg){
     reg.update();
   }).catch(function(){});
@@ -782,8 +786,8 @@ function App(){
         <div style={{display:"flex",alignItems:"center",gap:12}}>
           <div style={{width:40,height:40,borderRadius:12,background:"rgba(255,255,255,0.2)",display:"flex",alignItems:"center",justifyContent:"center",flexShrink:0,fontSize:20}}>🔮</div>
           <div style={{flex:1}}>
-            <div style={{display:"flex",alignItems:"center",gap:6,marginBottom:3}}><p style={{fontSize:12,fontWeight:700,color:"white"}}>ホロスコープ大幅アプデ！</p><span style={{fontSize:9,fontWeight:700,color:"#E8627C",background:"white",borderRadius:8,padding:"2px 7px"}}>NEW</span></div>
-            <p style={{fontSize:10,color:"rgba(255,255,255,0.85)",lineHeight:1.5}}>新キャラ12体追加で全24タイプに。SSRドラゴンやフェニックスが登場</p>
+            <div style={{display:"flex",alignItems:"center",gap:6,marginBottom:3}}><p style={{fontSize:12,fontWeight:700,color:"white"}}>キャラが増えたよ 🎉</p><span style={{fontSize:9,fontWeight:700,color:"#E8627C",background:"white",borderRadius:8,padding:"2px 7px"}}>NEW</span></div>
+            <p style={{fontSize:10,color:"rgba(255,255,255,0.85)",lineHeight:1.5}}>全24タイプに進化！あなたの推しキャラ、見つかるかも✨</p>
           </div>
         </div>
       </div>}
